Исправил замечания ревьюера
- Добавил ограничения в значениях таблиц БД
- Убрал лишние репозитории
- Исправлена архитектура DAO
- Исправлены методы в которых происходили запросы к базе по отношению N-количества цикла
- Исправил грубо зашитую логику проверок Mpa и Genre на динамические переменные